[gd_scene load_steps=112 format=3 uid="uid://clkaisn8kfb53"]

[ext_resource type="Script" uid="uid://cgrukxicvn5re" path="res://scripts/player_manager.gd" id="1_bruh7"]
[ext_resource type="Texture2D" uid="uid://couad7dgt7ya2" path="res://assets/Players/Character1_IdleSheet.png" id="1_p0vlq"]
[ext_resource type="Script" uid="uid://b82m3lfdt8qsb" path="res://scripts/player_movement.gd" id="1_v6fml"]
[ext_resource type="Texture2D" uid="uid://d0eft152bpv5c" path="res://assets/Players/Character1_WalkSheet.png" id="3_3li8b"]
[ext_resource type="Texture2D" uid="uid://beksd6l7xeij3" path="res://assets/Players/Character1_Guitar_IdleSheet.png" id="3_70d11"]
[ext_resource type="Texture2D" uid="uid://b2nwnu8ix1u7" path="res://assets/Players/Character1_Mic_IdleSheet.png" id="4_khinc"]
[ext_resource type="Script" uid="uid://dgvxaxbvnqffb" path="res://scripts/player_shooting.gd" id="4_mdl7e"]
[ext_resource type="Texture2D" uid="uid://bdavq8msifiqk" path="res://assets/Players/Character1_Guitar_WalkSheet.png" id="5_cw2d6"]
[ext_resource type="Texture2D" uid="uid://d38xcyjv5uwbe" path="res://assets/Players/Character1_Mic_WalkSheet.png" id="7_bruh7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_b8lor"]
atlas = ExtResource("1_p0vlq")
region = Rect2(4, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_6e537"]
atlas = ExtResource("1_p0vlq")
region = Rect2(4, 36, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_p07f3"]
atlas = ExtResource("1_p0vlq")
region = Rect2(4, 72, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_viqgg"]
atlas = ExtResource("1_p0vlq")
region = Rect2(4, 108, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgkxt"]
atlas = ExtResource("1_p0vlq")
region = Rect2(4, 144, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsi7p"]
atlas = ExtResource("1_p0vlq")
region = Rect2(4, 180, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jpwa"]
atlas = ExtResource("1_p0vlq")
region = Rect2(4, 216, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfeki"]
atlas = ExtResource("1_p0vlq")
region = Rect2(4, 252, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nyu3"]
atlas = ExtResource("3_70d11")
region = Rect2(1, 0, 33, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_priom"]
atlas = ExtResource("3_70d11")
region = Rect2(1, 36, 33, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_lt3gi"]
atlas = ExtResource("3_70d11")
region = Rect2(1, 72, 33, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_akpgi"]
atlas = ExtResource("3_70d11")
region = Rect2(1, 108, 33, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_84ti5"]
atlas = ExtResource("4_khinc")
region = Rect2(0, 324, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_afj6a"]
atlas = ExtResource("4_khinc")
region = Rect2(0, 468, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_cji5y"]
atlas = ExtResource("4_khinc")
region = Rect2(0, 612, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_blnfk"]
atlas = ExtResource("4_khinc")
region = Rect2(0, 756, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdl7e"]
atlas = ExtResource("3_3li8b")
region = Rect2(4, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_qu4a1"]
atlas = ExtResource("3_3li8b")
region = Rect2(4, 36, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_70d11"]
atlas = ExtResource("3_3li8b")
region = Rect2(4, 72, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_cw2d6"]
atlas = ExtResource("3_3li8b")
region = Rect2(4, 108, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_khinc"]
atlas = ExtResource("3_3li8b")
region = Rect2(4, 144, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_bruh7"]
atlas = ExtResource("3_3li8b")
region = Rect2(4, 180, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_axnmu"]
atlas = ExtResource("3_3li8b")
region = Rect2(4, 216, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvsjc"]
atlas = ExtResource("3_3li8b")
region = Rect2(4, 252, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxdpb"]
atlas = ExtResource("3_3li8b")
region = Rect2(4, 288, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_agngo"]
atlas = ExtResource("3_3li8b")
region = Rect2(4, 324, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrixf"]
atlas = ExtResource("3_3li8b")
region = Rect2(4, 360, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmt83"]
atlas = ExtResource("3_3li8b")
region = Rect2(4, 396, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_kumhx"]
atlas = ExtResource("5_cw2d6")
region = Rect2(2, 0, 33, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_100hb"]
atlas = ExtResource("5_cw2d6")
region = Rect2(2, 36, 33, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_7odld"]
atlas = ExtResource("5_cw2d6")
region = Rect2(2, 72, 33, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_axtmv"]
atlas = ExtResource("5_cw2d6")
region = Rect2(2, 108, 33, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_6x32p"]
atlas = ExtResource("5_cw2d6")
region = Rect2(2, 144, 33, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_pusvq"]
atlas = ExtResource("5_cw2d6")
region = Rect2(2, 180, 33, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_qduiv"]
atlas = ExtResource("5_cw2d6")
region = Rect2(2, 216, 33, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_7yj0e"]
atlas = ExtResource("5_cw2d6")
region = Rect2(2, 252, 33, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0jld"]
atlas = ExtResource("5_cw2d6")
region = Rect2(2, 288, 33, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdclj"]
atlas = ExtResource("5_cw2d6")
region = Rect2(2, 324, 33, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_ml80s"]
atlas = ExtResource("5_cw2d6")
region = Rect2(2, 360, 33, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdgyb"]
atlas = ExtResource("5_cw2d6")
region = Rect2(2, 396, 33, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_qabq5"]
atlas = ExtResource("7_bruh7")
region = Rect2(0, 108, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqny8"]
atlas = ExtResource("7_bruh7")
region = Rect2(0, 252, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgg3w"]
atlas = ExtResource("7_bruh7")
region = Rect2(0, 396, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpppk"]
atlas = ExtResource("7_bruh7")
region = Rect2(0, 540, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm57i"]
atlas = ExtResource("7_bruh7")
region = Rect2(0, 684, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdlf2"]
atlas = ExtResource("7_bruh7")
region = Rect2(0, 828, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2ifm"]
atlas = ExtResource("7_bruh7")
region = Rect2(0, 972, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vqve"]
atlas = ExtResource("7_bruh7")
region = Rect2(0, 1116, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfjxt"]
atlas = ExtResource("7_bruh7")
region = Rect2(0, 1260, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5kac"]
atlas = ExtResource("7_bruh7")
region = Rect2(0, 1404, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_qycqj"]
atlas = ExtResource("7_bruh7")
region = Rect2(0, 1548, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_24r77"]
atlas = ExtResource("7_bruh7")
region = Rect2(0, 1692, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_6eyey"]
atlas = ExtResource("3_3li8b")
region = Rect2(69, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3wef"]
atlas = ExtResource("3_3li8b")
region = Rect2(69, 36, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4126"]
atlas = ExtResource("3_3li8b")
region = Rect2(69, 72, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkdrv"]
atlas = ExtResource("3_3li8b")
region = Rect2(69, 108, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7iby"]
atlas = ExtResource("3_3li8b")
region = Rect2(69, 144, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rnld"]
atlas = ExtResource("3_3li8b")
region = Rect2(69, 180, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_srp4u"]
atlas = ExtResource("3_3li8b")
region = Rect2(69, 216, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfpux"]
atlas = ExtResource("3_3li8b")
region = Rect2(69, 252, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_61ith"]
atlas = ExtResource("3_3li8b")
region = Rect2(69, 288, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebwui"]
atlas = ExtResource("3_3li8b")
region = Rect2(69, 324, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfy4j"]
atlas = ExtResource("3_3li8b")
region = Rect2(69, 360, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_gv3ic"]
atlas = ExtResource("3_3li8b")
region = Rect2(69, 396, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvyme"]
atlas = ExtResource("5_cw2d6")
region = Rect2(75, 0, 30, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_swrsk"]
atlas = ExtResource("5_cw2d6")
region = Rect2(75, 36, 30, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkfac"]
atlas = ExtResource("5_cw2d6")
region = Rect2(75, 72, 30, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_unhkg"]
atlas = ExtResource("5_cw2d6")
region = Rect2(75, 108, 30, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_2kajp"]
atlas = ExtResource("5_cw2d6")
region = Rect2(75, 144, 30, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_ku51j"]
atlas = ExtResource("5_cw2d6")
region = Rect2(75, 180, 30, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_la8f2"]
atlas = ExtResource("5_cw2d6")
region = Rect2(75, 216, 30, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_oanc2"]
atlas = ExtResource("5_cw2d6")
region = Rect2(75, 252, 30, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_41lfj"]
atlas = ExtResource("5_cw2d6")
region = Rect2(75, 288, 30, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_1nh4m"]
atlas = ExtResource("5_cw2d6")
region = Rect2(75, 324, 30, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hk6f"]
atlas = ExtResource("5_cw2d6")
region = Rect2(75, 360, 30, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmxrx"]
atlas = ExtResource("5_cw2d6")
region = Rect2(75, 396, 30, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4as6"]
atlas = ExtResource("3_3li8b")
region = Rect2(36, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1r6t"]
atlas = ExtResource("3_3li8b")
region = Rect2(36, 36, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0asu"]
atlas = ExtResource("3_3li8b")
region = Rect2(36, 72, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_fq1a3"]
atlas = ExtResource("3_3li8b")
region = Rect2(36, 108, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu4mg"]
atlas = ExtResource("3_3li8b")
region = Rect2(36, 144, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_tk6la"]
atlas = ExtResource("3_3li8b")
region = Rect2(36, 180, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrxk4"]
atlas = ExtResource("3_3li8b")
region = Rect2(36, 216, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_eg1p0"]
atlas = ExtResource("3_3li8b")
region = Rect2(36, 252, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2u8p"]
atlas = ExtResource("3_3li8b")
region = Rect2(36, 288, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_qv10x"]
atlas = ExtResource("3_3li8b")
region = Rect2(36, 324, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdxpi"]
atlas = ExtResource("3_3li8b")
region = Rect2(36, 360, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_7b437"]
atlas = ExtResource("3_3li8b")
region = Rect2(36, 396, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvw7q"]
atlas = ExtResource("5_cw2d6")
region = Rect2(38, 0, 33, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0eor"]
atlas = ExtResource("5_cw2d6")
region = Rect2(38, 36, 33, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrwhh"]
atlas = ExtResource("5_cw2d6")
region = Rect2(38, 72, 33, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7djh"]
atlas = ExtResource("5_cw2d6")
region = Rect2(38, 108, 33, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_wx1s8"]
atlas = ExtResource("5_cw2d6")
region = Rect2(38, 144, 33, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_im07a"]
atlas = ExtResource("5_cw2d6")
region = Rect2(38, 180, 33, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsbg5"]
atlas = ExtResource("5_cw2d6")
region = Rect2(38, 216, 33, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_uobdy"]
atlas = ExtResource("5_cw2d6")
region = Rect2(38, 252, 33, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_iv1vf"]
atlas = ExtResource("5_cw2d6")
region = Rect2(38, 288, 33, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_2viqe"]
atlas = ExtResource("5_cw2d6")
region = Rect2(38, 324, 33, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjt17"]
atlas = ExtResource("5_cw2d6")
region = Rect2(38, 360, 33, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_27epi"]
atlas = ExtResource("5_cw2d6")
region = Rect2(38, 396, 33, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_6eyey"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8lor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6e537")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p07f3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_viqgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgkxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsi7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jpwa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfeki")
}],
"loop": true,
"name": &"Idle_Down",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nyu3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_priom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lt3gi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_akpgi")
}],
"loop": true,
"name": &"Idle_Down_Guitar",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_84ti5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afj6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cji5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_blnfk")
}],
"loop": true,
"name": &"Idle_Down_Mic",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdl7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qu4a1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70d11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cw2d6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khinc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bruh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axnmu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvsjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxdpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agngo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrixf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmt83")
}],
"loop": true,
"name": &"Run_Down",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kumhx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_100hb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7odld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axtmv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6x32p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pusvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qduiv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7yj0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0jld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ml80s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdgyb")
}],
"loop": true,
"name": &"Run_Down_Guitar",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qabq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqny8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgg3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpppk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm57i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdlf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2ifm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vqve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfjxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5kac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qycqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24r77")
}],
"loop": true,
"name": &"Run_Down_Mic",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6eyey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3wef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4126")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkdrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7iby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rnld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srp4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfpux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61ith")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebwui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfy4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gv3ic")
}],
"loop": true,
"name": &"Run_Right",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvyme")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swrsk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkfac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_unhkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2kajp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ku51j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_la8f2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oanc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41lfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1nh4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hk6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmxrx")
}],
"loop": true,
"name": &"Run_Right_Guitar",
"speed": 16.0
}, {
"frames": [],
"loop": true,
"name": &"Run_Right_Mic",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4as6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1r6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0asu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fq1a3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu4mg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tk6la")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrxk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eg1p0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2u8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qv10x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdxpi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7b437")
}],
"loop": true,
"name": &"Run_Up",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvw7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0eor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nrwhh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7djh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wx1s8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_im07a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsbg5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uobdy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iv1vf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2viqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjt17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27epi")
}],
"loop": true,
"name": &"Run_Up_Guitar",
"speed": 16.0
}, {
"frames": [],
"loop": true,
"name": &"Run_Up_Mic",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_d3wef"]
radius = 9.0
height = 28.0

[node name="Player" type="CharacterBody2D"]
z_index = 5
collision_layer = 2
collision_mask = 5
script = ExtResource("1_v6fml")

[node name="PlayerManager" type="Node" parent="."]
script = ExtResource("1_bruh7")

[node name="Timer" type="Timer" parent="PlayerManager"]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -14)
sprite_frames = SubResource("SpriteFrames_6eyey")
animation = &"Run_Up"
autoplay = "Idle_Down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -15)
shape = SubResource("CapsuleShape2D_d3wef")

[node name="Shooting" type="Node2D" parent="."]
position = Vector2(0, 9)
script = ExtResource("4_mdl7e")

[node name="FireRate" type="Timer" parent="Shooting"]
one_shot = true

[connection signal="currentWeapon" from="PlayerManager" to="." method="_on_player_manager_current_weapon"]
[connection signal="currentWeapon" from="PlayerManager" to="Shooting" method="_on_player_manager_current_weapon"]
[connection signal="timeout" from="PlayerManager/Timer" to="PlayerManager" method="_on_timer_timeout"]
[connection signal="timeout" from="Shooting/FireRate" to="Shooting" method="_on_fire_rate_timeout"]
